# python-zbMathRest2Oai

./: .deepsource.toml  .gitignore  .gitignore.swp  DEADJOE  Dockerfile  README.Docker.md  README.md  Untitled Diagram.drawio  codemeta.json  deposited_software.txt  getPublicationInfo.py  last_id.txt  pyproject.toml  rad.txt  requirements.txt  setup.cfg  setup.py  software_data.csv  test_init.py
.github/workflows/: docker.yml  python-app.yml
example/sw825/: software_quickstatements_metadata.json  software_quickstatements_references.json
formats/: cleaningfiles.sh  createCrosswalks.sh  createFormats.sh
json mapping/: mapping restoai.md
src/: staging_deposit.py  state.json
src/local_export/: extract_for_datacite.py  run_write_local_all_software.py  writeLocal.py  writeLocal.sh
src/swmath2swh/: Convert_from_test_Result_to_codemeta_json.py  archival.py  collection_swhid_dir_ids.py  convertSoftware_from_json_toXml.py  demo_archival.py  deposit.py  restApi_software_Json.py  run_write_local_all_software.py  staging_archival.py  staging_deposit.py  staging_deposit_v2.py  staging_deposit_v3.py  staging_deposit_v4.py  swhid.py
src/xslt/: documentation.md  example.md
src/zbmath_rest2oai/: .getWithSwagger.py.swp  Convert_from_test_Result_to_codemeta_json.py  Convert_from_xml_to_Json.py  check_api_status.py  collection_swhid_dir_ids.py  convertSoftware_from_json_toXml.py  demo_archival.py  fake_dict_sw.py  final.xml  getAsJSON.py  getAsXml.py  getPublicationInfo.py  getWithSwagger.py  get_all.py  get_all_de.py  get_sets.py  last_id.txt  oai_connection.py  output mapping - Copy.json  restApi_software_Json.py  run_get_all_de.py  run_get_all_de_documents.py  run_get_all_de_software.py  run_software_quickstatements.py  run_write_local_all_software.py  software.csv  software_quickstatements.py  (+16 more)
support/: run_write_local_test.sh  write_local_test.py
test/: Convert_from_test_Result_to_codemeta_json.py  Convert_from_xml_to_Json.py  codemeta.xsd  oai_connect_test.py  oai_connection.py  openAPI_Version_Test.py  test_dlmf_char_replacement.py  test_extract_tags.py  test_get_sets.py  test_invalid_char_xml.py  test_metadata-software-OpenAire.py  test_metadata-software_OpenAire.py  test_metadata_article_Datacite.py  test_metadata_article_OpenAire.py  test_metadata_articles-OpenAire2.py  test_metadata_software_Codemeta.py  test_metadata_software_Datacite.py  test_node_names_software_datacite.py  test_oai_preview.py  test_plain_xml.py  test_software_metadata.py  test_software_quickstatements.py  test_zbMATH_API_version.py  test_zbmath_fixes.py
tests/: oai_connect_test.py  test_oai_preview.py  test_plain_xml.py
xslt/: documentation.md  example.md  template.xsl  xslt-article-transformation.xslt  xslt-software-transformation.xslt  xslt.sh
(+59 files in other folders)
