[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "zbmath_rest2oai"
description = "convert from custom api to oai-pmh api"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "radon",
    "flake8_polyfill",
    "coverage",
    "requests_mock",
    "python-dateutil",
    "pytest-coverage",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
