[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "zbmath_rest2oai"
description = "convert from custom api to oai-pmh api"
dynamic = ["version"]
dependencies = [
    "dict2xml",
    "requests",
    "swagger_client @ git+https://github.com/zbMATHOpen/zbRestApiClient.git"
]
[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "radon",
    "flake8_polyfill",
    "coverage",
    "requests_mock",
    "python-dateutil",
    "pytest-coverage",
    "xmldiff"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false