[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "zbmath_rest2oai"
description = "convert from custom api to oai-pmh api"
dynamic = ["version"]
dependencies = [
    "dict2xml",
    "requests",
    "aiohttp",
    "lxml"
]
[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "flake8",
    "isort",
    "pytest",
    "radon",
    "flake8_polyfill",
    "coverage",
    "requests_mock",
    "python-dateutil",
    "pytest-coverage",
    "xmldiff",
    "lxml"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]
