[metadata]
name = zbmath_rest2oai
description = convert from custom api to oai-pmh api

[options]
setup_requires = setuptools-scm
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false

[options.extras_require]
test =
    black
    flake8
    isort
    pytest
    radon
    flake8_polyfill
    coverage
    requests_mock
    python-dateutil
    pytest-coverage

[options.packages.find]
where = src
